zero-schema-macros/tests/ui/fail/67_optional_tagged_array.stderr
error[E0277]: the trait bound `TaggedPayload: WireType` is not satisfied
  --> tests/ui/fail/67_optional_tagged_array.rs:21:1
   |
21 | #[zero]
   | ^^^^^^^ the trait `WireType` is not implemented for `TaggedPayload`
   |
   = help: the following other types implement trait `WireType`:
             Child
             Invalid
             Tag
   = help: see issue #48214
   = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `TaggedPayload: WireTypeSupport` is not satisfied
  --> tests/ui/fail/67_optional_tagged_array.rs:21:1
   |
21 | #[zero]
   | ^^^^^^^ the trait `WireTypeSupport` is not implemented for `TaggedPayload`
   |
   = help: the following other types implement trait `WireTypeSupport`:
             Child
             Invalid
             Tag
   = help: see issue #48214
   = note: this error originates in the attribute macro `zero` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `TaggedPayload: WireType` is not satisfied
  --> tests/ui/fail/67_optional_tagged_array.rs:21:1
   |
21 | #[zero]
   | ^^^^^^^ the trait `WireType` is not implemented for `TaggedPayload`
   |
   = help: the following other types implement trait `WireType`:
             Child
             Invalid
             Tag
   = help: see issue #48214
   = note: this error originates in the derive macro `::zerocopy::FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `TaggedPayload: WireType` is not satisfied
  --> tests/ui/fail/67_optional_tagged_array.rs:21:1
   |
21 | #[zero]
   | ^^^^^^^ the trait `WireType` is not implemented for `TaggedPayload`
   |
   = help: the following other types implement trait `WireType`:
             Child
             Invalid
             Tag
   = help: see issue #48214
   = note: this error originates in the derive macro `::zerocopy::KnownLayout` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `TaggedPayload: WireTypeSupport` is not satisfied
  --> tests/ui/fail/67_optional_tagged_array.rs:21:1
   |
21 | #[zero]
   | ^^^^^^^ the trait `WireTypeSupport` is not implemented for `TaggedPayload`
   |
   = help: the following other types implement trait `WireTypeSupport`:
             Child
             Invalid
             Tag
   = help: see issue #48214
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
